objects/ConsumptionSchedule.object
<CustomObject>
    <fields>
        <fullName>SBQQ__Category__c</fullName>
        <label>Category</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Rates</fullName>
                    <default>true</default>
                    <label>Rates</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__BillingRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to the Billing Rule assigned</inlineHelpText>
        <label>Billing Rule</label>
        <referenceTo>blng__BillingRule__c</referenceTo>
        <relationshipLabel>Billing Rule</relationshipLabel>
        <relationshipName>ConsumptionSchedulesBillingRule</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__RevenueRecognitionRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to the Revenue Recognition Rule assigned</inlineHelpText>
        <label>Revenue Recognition Rule</label>
        <referenceTo>blng__RevenueRecognitionRule__c</referenceTo>
        <relationshipLabel>Revenue Recognition Rule</relationshipLabel>
        <relationshipName>CSsRevenueRecognitionRule</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__TaxRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to the Tax Rule assigned</inlineHelpText>
        <label>Tax Rule</label>
        <referenceTo>blng__TaxRule__c</referenceTo>
        <relationshipLabel>Tax Rule</relationshipLabel>
        <relationshipName>ConsumptionSchedulesTaxRule</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>All_ConsumptionSchedules</fullName>
        <filterScope>Everything</filterScope>
        <label>All Consumption Schedules</label>
    </listViews>
    <listViews>
        <fullName>My_ConsumptionSchedules</fullName>
        <filterScope>Mine</filterScope>
        <label>My Consumption Schedules</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>